# v-j-bc-client

./: .gitignore  README.md  build.gradle  config.h.in  meson.build  meson_options.txt
src/main/java/com/velopayments/blockchain/cert/: AttestationException.java  Certificate.java  CertificateBuilder.java  CertificateFieldReader.java  CertificateParser.java  CertificateReader.java  Field.java  FieldConversionException.java  MissingFieldException.java
src/main/java/com/velopayments/blockchain/client/: AgentConnection.java  Connection.java  RequestType.java  Response.java  SocketAdapter.java  SocketAdapterMethod.java
src/main/java/com/velopayments/blockchain/crypt/: EncryptionKeyPair.java  EncryptionPrivateKey.java  EncryptionPublicKey.java  Message.java  Signature.java  SigningKeyPair.java  SigningPrivateKey.java  SigningPublicKey.java
src/main/java/com/velopayments/blockchain/init/: Initializer.java
src/main/java/com/velopayments/blockchain/util/: Entity.java  EntityFactory.java  PrivateEntity.java
src/main/native/include/com/velopayments/blockchain/cert/: AttestationException.h  Certificate.h  CertificateBuilder.h
src/main/native/include/com/velopayments/blockchain/crypt/: EncryptionKeyPair.h  EncryptionPrivateKey.h  EncryptionPublicKey.h  Message.h  Signature.h  SigningKeyPair.h  SigningPrivateKey.h  SigningPublicKey.h
src/main/native/include/com/velopayments/blockchain/init/: init.h  init_fwd.h
src/main/native/include/java/lang/: IllegalArgumentException.h  IllegalStateException.h  Integer.h  NullPointerException.h
src/main/native/include/java/util/: AbstractMap_SimpleEntry.h  LinkedList.h
src/main/native/src/com/velopayments/blockchain/cert/: AttestationException_register.c  CertificateBuilder_emit.c  CertificateBuilder_register.c  CertificateBuilder_signNative.c  CertificateParser_parseNative.c  Certificate_register.c
src/main/native/src/com/velopayments/blockchain/crypt/: EncryptionKeyPair_generateNative.c  EncryptionKeyPair_register.c  EncryptionPrivateKey_register.c  EncryptionPublicKey_register.c  Message_register.c  Signature_register.c  SigningKeyPair_generateNative.c  SigningKeyPair_register.c  SigningPrivateKey_register.c  SigningPrivateKey_signNative.c  SigningPublicKey_register.c  SigningPublicKey_verifyNative.c
src/main/native/src/com/velopayments/blockchain/init/: Initializer_blockchainInit.c
src/main/native/src/com/velopayments/blockchain/util/: EntityFactory_decryptCertificate.c
src/main/native/src/java/lang/: IllegalArgumentException_register.c  IllegalStateException_register.c  Integer_register.c  NullPointerException_register.c
src/main/native/src/java/util/: LinkedList_register.c  SimpleEntry_register.c
src/test/java/com/velopayments/blockchain/cert/: CertificateBuilderTest.java  CertificateFieldReaderTest.java  CertificateParserTest.java  CertificateTest.java  FieldTest.java
src/test/java/com/velopayments/blockchain/crypt/: EncryptionKeyPairTest.java  EncryptionPrivateKeyTest.java  EncryptionPublicKeyTest.java  MessageTest.java  SignatureTest.java  SigningKeyPairTest.java  SigningPrivateKeyTest.java  SigningPublicKeyTest.java
src/test/java/com/velopayments/blockchain/init/: InitializerTest.java
src/test/java/com/velopayments/blockchain/util/: EntityFactoryTest.java
subprojects/: gtest.wrap  lmdb.wrap  minunit.wrap  rcpr.wrap  vcblockchain.wrap  vccert.wrap  vccrypt.wrap  vcmodel.wrap  vctool.wrap  vpr.wrap
